--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	</head>
 	<body>
 		<div id='root'></div>
-		<script src="/static/bundle.js"></script>
+		<script src='/lib/bundle.js'></script>
 	</body>
 </html>
